Fix for bug 45805 - 16-bit signed/unsigned problems in HSSFSheet.getColWidth() etc
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@696075 13f79535-47bb-0310-9956-ffa450edef68